--- a/front/src/app/pages/home-rappi/home-rappi.component.html
+++ b/front/src/app/pages/home-rappi/home-rappi.component.html
@@ -1,3 +1,9 @@
-<p>
-  home-rappi works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 text-right">
+      <button type="button" class="btn btn-light btn-lg" (click)="signOut()">
+        Sign out
+      </button>
+    </div>
+  </div>
+</div>
