--- a/front/src/app/pages/home-admin/home-admin.component.html
+++ b/front/src/app/pages/home-admin/home-admin.component.html
@@ -1,3 +1,19 @@
-<p>
-  home-admin works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <button
+        type="button"
+        class="btn btn-lg"
+        style="background:#FF656B; color:white;"
+        (click)="register()"
+      >
+        Register rappi
+      </button>
+    </div>
+    <div class="col-6 text-right">
+      <button type="button" class="btn btn-light btn-lg" (click)="signOut()">
+        Sign out
+      </button>
+    </div>
+  </div>
+</div>
