--- a/front/src/app/pages/register-rappi/register-rappi.component.html
+++ b/front/src/app/pages/register-rappi/register-rappi.component.html
@@ -25,7 +25,7 @@
     <div class="form-group">
       <label for="exampleInputEmail1">Document</label>
       <input
-        type="text"
+        type="number"
         class="form-control"
         aria-describedby="documentHelp"
         placeholder="Enter the document number"
@@ -41,9 +41,6 @@
         placeholder="Enter email"
         [(ngModel)]="email"
       />
-      <small id="emailHelp" class="form-text text-muted"
-        >We'll never share your email with anyone else.</small
-      >
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
@@ -56,7 +53,7 @@
     </div>
     <div class="row">
       <div class="col-6">
-        <button type="button" class="btn btn-light btn-lg" (click)="register()">
+        <button type="button" class="btn btn-light btn-lg" (click)="cancel()">
           Cancel
         </button>
       </div>
@@ -65,9 +62,9 @@
           type="button"
           class="btn btn-lg"
           style="background:#FF656B; color:white;"
-          (click)="cancel()"
+          (click)="register()"
         >
-          Rgister
+          Register
         </button>
       </div>
     </div>
