--- a/front/src/app/pages/register-rappi/register-rappi.component.html
+++ b/front/src/app/pages/register-rappi/register-rappi.component.html
@@ -4,52 +4,23 @@
     <hr />
     <div class="form-group">
       <label for="exampleInputEmail1">Name</label>
-      <input
-        type="text"
-        class="form-control"
-        aria-describedby="nameHelp"
-        placeholder="Enter the name"
-        [(ngModel)]="name"
-      />
+      <input type="text" class="form-control" aria-describedby="nameHelp" placeholder="Enter the name" [(ngModel)]="name" />
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1">Phone</label>
-      <input
-        type="tel"
-        class="form-control"
-        aria-describedby="phoneHelp"
-        placeholder="Enter a phone number"
-        [(ngModel)]="phone"
-      />
+      <input type="tel" class="form-control" aria-describedby="phoneHelp" placeholder="Enter a phone number" [(ngModel)]="phone" />
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1">Document</label>
-      <input
-        type="number"
-        class="form-control"
-        aria-describedby="documentHelp"
-        placeholder="Enter the document number"
-        [(ngModel)]="document"
-      />
+      <input type="number" class="form-control" aria-describedby="documentHelp" placeholder="Enter the document number" [(ngModel)]="document" />
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input
-        type="email"
-        class="form-control"
-        aria-describedby="emailHelp"
-        placeholder="Enter email"
-        [(ngModel)]="email"
-      />
+      <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" [(ngModel)]="email" />
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        placeholder="Password"
-        [(ngModel)]="password"
-      />
+      <input type="password" class="form-control" placeholder="Password" [(ngModel)]="password" />
     </div>
     <div class="row">
       <div class="col-6">
@@ -58,12 +29,7 @@
         </button>
       </div>
       <div class="col-6 text-right">
-        <button
-          type="button"
-          class="btn btn-lg"
-          style="background:#FF656B; color:white;"
-          (click)="register()"
-        >
+        <button type="button" class="btn btn-lg" style="background:#FF656B; color:white;" (click)="register()">
           Register
         </button>
       </div>
