--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -11,9 +11,6 @@
         placeholder="Enter email"
         [(ngModel)]="email"
       />
-      <small id="emailHelp" class="form-text text-muted"
-        >We'll never share your email with anyone else.</small
-      >
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
@@ -39,7 +36,7 @@
           type="button"
           class="btn btn-lg"
           style="background:#FF656B; color:white;"
-          (click)="login()"
+          (click)="validateAndLogin()"
         >
           Login
         </button>
