--- a/front/src/app/pages/cart/cart.component.html
+++ b/front/src/app/pages/cart/cart.component.html
@@ -1,3 +1,23 @@
-<p>
-  cart works!
-</p>
+<div class="container">
+  <h3 class="ml-4">
+    <i class="fas fa-arrow-left" (click)="goBack()"></i> My cart
+  </h3>
+  <div class="row mt-4">
+    <div *ngFor="let product of products" class="col-12 col-md-6 col-lg-4 mb-4">
+      <app-cart-product [product]="product"></app-cart-product>
+    </div>
+  </div>
+  <div class="row text-right">Total: ${{ total }}</div>
+  <div class="row">
+    <div class="col-6  offset-6 text-right">
+      <button
+        type="button"
+        class="btn btn-lg"
+        style="background:#FF656B; color:white;"
+        (click)="showCart()"
+      >
+        Buy
+      </button>
+    </div>
+  </div>
+</div>
