--- a/front/src/app/pages/insert-address/insert-address.component.html
+++ b/front/src/app/pages/insert-address/insert-address.component.html
@@ -1,3 +1,50 @@
-<p>
-  insert-address works!
-</p>
+<div class="container">
+  <div style="text-align:center">
+    <h1>
+      please enter your address
+    </h1>
+  </div>
+  <div>
+    <div class="row">
+      <span>Latitude: {{ currentLat }}</span>
+    </div>
+    <div class="row">
+      <span>Longitude: {{ currentLong }}</span>
+    </div>
+    <br />
+    <div class="row">
+      <div class="col-md-12">
+        <div class="text-center">
+          <h3>
+            <div #gmap style="width:100%;height:300px"></div>
+          </h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="exampleInputEmail1">Your address</label>
+      <input
+        type="text"
+        class="form-control"
+        aria-describedby="address"
+        placeholder="Enter address"
+        [(ngModel)]="address"
+      />
+    </div>
+
+    <div class="row">
+      <div class="offset-6 col-6 text-right">
+        <button
+          type="button"
+          class="btn btn-lg"
+          style="background:#FF656B; color:white;"
+          (click)="saveAddress()"
+        >
+          Save
+        </button>
+      </div>
+    </div>
+  </div>
+  <br />
+</div>
