order view added

--- a/front/src/app/pages/home-rappi/home-rappi.component.html
+++ b/front/src/app/pages/home-rappi/home-rappi.component.html
@@ -6,4 +6,16 @@
       </button>
     </div>
   </div>
+  <div class="row">
+    <div class="col-6  offset-6 text-right">
+      <button
+        type="button"
+        class="btn btn-lg"
+        style="background:#FF656B; color:white;"
+        (click)="showOrders()"
+      >
+        Show orders
+      </button>
+    </div>
+  </div>
 </div>
