--- a/front/src/app/pages/insert-address/insert-address.component.html
+++ b/front/src/app/pages/insert-address/insert-address.component.html
@@ -16,7 +16,8 @@
       <div class="col-md-12">
         <div class="text-center">
           <h3>
-            <div #gmap style="width:100%;height:300px"></div>
+            <agm-map [latitude]="currentLat" [longitude]="currentLong"
+              [zoom]="15"></agm-map>
           </h3>
         </div>
       </div>
@@ -30,7 +31,7 @@
         aria-describedby="address"
         placeholder="Enter address"
         [(ngModel)]="address"
-      />
+        />
     </div>
 
     <div class="row">
@@ -39,8 +40,7 @@
           type="button"
           class="btn btn-lg"
           style="background:#FF656B; color:white;"
-          (click)="saveAddress()"
-        >
+          (click)="saveAddress()">
           Save
         </button>
       </div>
