--- a/front/src/app/pages/product-list/product-list.component.html
+++ b/front/src/app/pages/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h3 class="ml-4">
-    <i class="fas fa-arrow-left" (click)="goBack()"></i> {{ restaurantName }}'s
-    Products
+    <i class="fas fa-arrow-left" (click)="goBack()"></i> {{ restaurantName }}
+    products
   </h3>
   <div class="row mt-4">
     <div *ngFor="let product of products" class="col-12 col-md-6 col-lg-4 mb-4">
@@ -10,13 +10,12 @@
   </div>
 
   <div class="row">
-    <div class="col-6  offset-6 text-right">
+    <div class="col-6 offset-6 text-right">
       <button
         type="button"
         class="btn btn-lg"
         style="background:#FF656B; color:white;"
-        (click)="showCart()"
-      >
+        (click)="showCart()">
         Show cart
       </button>
     </div>
