--- a/front/src/app/pages/restaurant-list/restaurant-list.component.html
+++ b/front/src/app/pages/restaurant-list/restaurant-list.component.html
@@ -3,12 +3,13 @@
     <h3 class="ml-4">
       <i class="fas fa-arrow-left" (click)="goBack()"></i> Restaurants
     </h3>
-    <div
-      *ngFor="let restaurant of restaurants"
-      class="col-12  mb-4"
-      (click)="showRestaurants(restaurant)"
-    >
-      <app-restaurant [restaurant]="restaurant"> </app-restaurant>
+    <div class="row">
+      <div
+        *ngFor="let restaurant of restaurants"
+        class="col-12 col-md-6 mb-4"
+        (click)="showRestaurants(restaurant)">
+        <app-restaurant [restaurant]="restaurant"> </app-restaurant>
+      </div>
     </div>
   </div>
 </div>
