--- a/front/src/app/pages/sign-up/sign-up.component.html
+++ b/front/src/app/pages/sign-up/sign-up.component.html
@@ -10,7 +10,7 @@
         aria-describedby="nameHelp"
         placeholder="Enter your name"
         [(ngModel)]="name"
-      />
+        />
     </div>
     <div class="form-group">
       <label for="your identification number">Identification number</label>
@@ -21,8 +21,8 @@
         class="form-control"
         aria-describedby="idNumberHelp"
         placeholder="Enter your identification number"
-        [(ngModel)]="id_number"
-      />
+        [(ngModel)]="idNumber"
+        />
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
@@ -32,10 +32,9 @@
         aria-describedby="emailHelp"
         placeholder="Enter email"
         [(ngModel)]="email"
-      />
-      <small id="emailHelp" class="form-text text-muted"
-        >We'll never share your email with anyone else.</small
-      >
+        />
+      <small id="emailHelp" class="form-text text-muted">We'll never share your
+        email with anyone else.</small>
     </div>
     <div class="form-group">
       <label for="your phone number">Phone number</label>
@@ -47,7 +46,7 @@
         aria-describedby="phoneHelp"
         placeholder="Enter your phone number"
         [(ngModel)]="phone"
-      />
+        />
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
@@ -56,21 +55,21 @@
         class="form-control"
         placeholder="Password"
         [(ngModel)]="password"
-      />
+        />
     </div>
     <div class="form-group form-check">
       <input
         type="checkbox"
         class="form-check-input"
         [(ngModel)]="acceptTerms"
-      />
-      <label class="form-check-label" for="exampleCheck1"
-        >Accept terms and conditions</label
-      >
+        />
+      <label class="form-check-label" for="exampleCheck1">Accept terms and
+        conditions</label>
     </div>
     <div class="row">
       <div class="col-6">
-        <button type="button" class="btn btn-light btn-lg" (click)="login()">
+        <button type="button" class="btn btn-light btn-lg"
+          (click)="goToLogin()">
           Login
         </button>
       </div>
@@ -79,8 +78,7 @@
           type="button"
           class="btn btn-lg"
           style="background:#FF656B; color:white;"
-          (click)="signUp()"
-        >
+          (click)="signUp()">
           Sign Up
         </button>
       </div>
