--- a/front/src/app/pages/insert-address/insert-address.component.html
+++ b/front/src/app/pages/insert-address/insert-address.component.html
@@ -17,7 +17,9 @@
         <div class="text-center">
           <h3>
             <agm-map [latitude]="currentLat" [longitude]="currentLong"
-              [zoom]="15"></agm-map>
+              [zoom]="15">
+              <agm-marker [latitude]="currentLat" [longitude]="currentLong"></agm-marker>
+            </agm-map>
           </h3>
         </div>
       </div>
