--- a/front/src/app/components/product/product.component.html
+++ b/front/src/app/components/product/product.component.html
@@ -19,8 +19,7 @@
         <button
           class="btn btn-light my-2 my-sm-0"
           type="submit"
-          data-toggle="modal"
-          data-target="#modalCompra">
+          (click)="add()">
           <i class="fas fa-plus"></i>
         </button>
       </form>
