--- a/front/src/app/pages/cart/cart.component.html
+++ b/front/src/app/pages/cart/cart.component.html
@@ -7,15 +7,14 @@
       <app-cart-product [product]="product"></app-cart-product>
     </div>
   </div>
-  <div class="row text-right">Total: ${{ total }}</div>
+  <div class="row text-right h4">Total: ${{ total }}</div>
   <div class="row">
-    <div class="col-6  offset-6 text-right">
+    <div class="col-6 offset-6 text-right">
       <button
         type="button"
         class="btn btn-lg"
         style="background:#FF656B; color:white;"
-        (click)="showCart()"
-      >
+        (click)="showCart()">
         Buy
       </button>
     </div>
